--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
         <li>minutes</li>
         <li>hours<li>
       </ol>
+
+
+
+      <h3>starr</h3>
+      <p>aar het merendeel heeft te lijden gehad van wijzigingen in een of andere vorm, door ingevoegde humor of willekeurig gekozen woorden die nog niet half geloofwaardig ogen. Als u een passage uit Lorum Ipsum gaat gebruiken dient u zich ervan te verzekeren dat er niets beschamends midden in de tekst verborgen zit. Alle Lorum Ipsum generators op Internet hebben de eigenschap voorgedefinieerde stukken te herhalen waar nodig zodat dit de eerste echte generator is op internet. Het gebruikt een woordenlijst van 200 latijnse woorden gec</p>
   </body>
 
 </html>
